create UI dashboard

--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "@storybook/react": "^6.5.16",
     "@types/react-toastify": "^4.1.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "apexcharts": "3.37.3",
     "axios": "^1.3.5",
+    "chart.js": "^4.4.4",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.3.30",
     "html2canvas": "^1.4.1",
     "i18next": "^22.4.14",
     "intercept-stdout": "^0.1.2",
@@ -46,12 +48,14 @@
     "next-i18next": "^13.2.2",
     "next-redux-wrapper": "^8.1.0",
     "nextjs-progressbar": "^0.0.16",
-    "pdfjs-dist": "^3.11.174",
+    "pdfjs-dist": "^4.5.136",
     "postcss-nested": "^6.0.1",
     "query-string": "^8.1.0",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
+    "react-apexcharts": "1.4.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
@@ -70,7 +74,7 @@
     "recoil-persist": "^4.2.0",
     "redux-persist": "^6.0.0",
     "sharp": "^0.32.0",
-    "storybook": "^6.5.16",
+    "storybook": "^8.2.9",
     "storybook-addon-next": "^1.6.9",
     "styled-components": "^5.3.10",
     "uuid": "^10.0.0",
@@ -81,11 +85,11 @@
   "devDependencies": {
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-interactions": "^6.5.12",
+    "@storybook/addon-interactions": "^8.2.9",
     "@storybook/addon-links": "^6.5.12",
-    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/builder-webpack5": "^8.2.9",
     "@storybook/manager-webpack5": "^6.5.12",
-    "@storybook/react": "^6.5.12",
+    "@storybook/react": "^8.2.9",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/testing-react": "^1.3.0",
     "@svgr/webpack": "^7.0.0",
