--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^5.0.11",
     "@mui/x-date-pickers-pro": "^6.9.2",
+    "@pdfslick/react": "^1.5.2",
+    "@pdftron/webviewer": "^10.12.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@syncfusion/ej2-react-documenteditor": "^27.1.51",
     "@types/react-toastify": "^4.1.0",
     "@uidotdev/usehooks": "^2.4.1",
     "apexcharts": "3.37.3",
-    "axios": "^1.3.5",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
@@ -40,6 +43,7 @@
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.8.0",
     "material-react-table": "^2.13.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
@@ -48,7 +52,7 @@
     "next-i18next": "^13.2.2",
     "next-redux-wrapper": "^8.1.0",
     "nextjs-progressbar": "^0.0.16",
-    "pdfjs-dist": "^4.5.136",
+    "pdfjs-dist": "^4.6.82",
     "postcss-nested": "^6.0.1",
     "query-string": "^8.1.0",
     "raw-loader": "^4.0.2",
@@ -66,6 +70,7 @@
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.0",
+    "react-smooth-collapse": "^2.1.2",
     "react-sortable-tree": "^2.8.0",
     "react-to-print": "^2.14.13",
     "react-toastify": "^9.1.2",
@@ -95,9 +100,9 @@
     "@svgr/webpack": "^7.0.0",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "18.15.11",
-    "@types/react": "18.0.32",
+    "@types/react": "^18.0.32",
     "@types/react-beautiful-dnd": "^13.1.4",
-    "@types/react-dom": "18.0.11",
+    "@types/react-dom": "^18.0.11",
     "@types/react-sortable-tree": "^0.3.16",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.14",
@@ -108,6 +113,6 @@
     "next": "^13.3.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
-    "typescript": "5.0.3"
+    "typescript": "^5.0.3"
   }
 }
