--- a/package.json
+++ b/package.json
@@ -62,13 +62,14 @@
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
     "react-country-flag": "^3.1.0",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.0",
     "react-loading-overlay-ts": "^2.0.2",
     "react-number-format": "^5.2.2",
     "react-query": "^3.39.3",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-redux": "^8.1.0",
     "react-smooth-collapse": "^2.1.2",
     "react-sortable-tree": "^2.8.0",
