--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,14 +20,19 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
   "include": [
     "next-env.d.ts",
     "pages/**/*",
     "src/**/*",
-    "src/components/atoms/*"
-, "postcss.module.js", "src/components/templates/Accounting/EntryInvoice/EntryInvoiceList/useEntryInvoiceList/useEntryInvoiceList.tsx", "src/pages/api/hello/index.page/.ts"],
-  "exclude": ["node_modules"]
+    "src/components/atoms/*",
+    "postcss.module.js"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
